--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ avatar: https://avatars1.githubusercontent.com/u/4437323?v=3&u=2f6c037f8fdf7f73c
 footer-links:
   dribbble:
   email: raydreww@gmail.com
-  facebook: facebook.com/ray.hack.azer
+  facebook: ray.hack.azer
   flickr:
-  github: ironlota/ironlota.github.io
+  github: ironlota
   instagram: raydreee
   linkedin:
   pinterest:
